--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         </ul>
         <div class="reglog">
             <button onclick="hey()"><div>Quero ser NuInvest <img src="imagens/ArrowPurple.svg" alt=""></div></button>
-            <button onclick="hey()"><div><span>Login</span> <img src="imagens/arrow-right-to-bracket-solid.svg" alt=""></div></button>
+            <button onclick="hey()"><div>Login <img src="imagens/arrow-right-to-bracket-solid.svg" alt=""></div></button>
         </div>
     </nav>
     <main>
@@ -75,7 +75,7 @@
             <div class="headerposition">
                 <h1>NuInvest</h1>
                 <h2>A plataforma de investimentos do Nubank com a expertise de 50 anos de mercado da Easynvest. A sua forma de investir ficou ainda mais descomplicada.</h2>
-                <a href="#">Abra sua conta gratuita <img src="imagens/arrow_forward_white_24dp.svg" alt=""></a>
+                <div class="linha"><a href="#"><div class="textImg">Abra sua conta gratuita <img src="imagens/arrow_forward_white_24dp.svg" alt=""></div><hr></a></div>
             </div>
         </header>
 
@@ -83,8 +83,8 @@
             <div class="arrumar">
                 <div class="text">
                     <h1 class="txth1"><b class="txtb">Zero corretagem</b><br>O jeito mais fácil de investir na Bolsa: em aplenas três cliques.</h2>
-                    <a href="#" class="txta">Invista em ações com taxa zero<img src="imagens/ArrowPurple.svg" alt=""></a>
-                </div>
+                        <div class="linha"><a href="#"><div class="textImg">Invista em ações com taxa zero <img src="imagens/ArrowPurple.svg" alt=""></div><hr></a></div>
+                    </div>
                 <img src="imagens/homem_usando_aplicativo.webp" alt="">
             </div>
 
@@ -95,7 +95,7 @@
                     <img src="imagens/home_mockup_uv.webp" id="cell" alt="">
                     <div class="text">
                         <h1 class="txth1"><b class="txtb">Fundos Nu Ultravioleta</b><br>Uma seleção sofisitcada de fundos a partir de R$100.</h1>
-                        <a href="#" class="txta">Sem taxa de administração <img src="imagens/ArrowPurple.svg""></a>
+                        <div class="linha"><a href="#"><div class="textImg">Sem taxa de administração <img src="imagens/ArrowPurple.svg" alt=""></div><hr></a></div>
                     </div>
             </div>
         </section>
@@ -108,25 +108,25 @@
                 <div class="carrossel">
                     <div class="roleta">
                          <div class="opRoleta" id="slot1">
-                            <div class="txtOpInv"><h1>Ações</h1><h2>Seja sócio de empresas</h2></div><a href="#" class="txta">Saiba mais<img src="imagens/ArrowPurple.svg" alt=""></a>
+                            <div class="txtOpInv"><h1>Ações</h1><h2>Seja sócio de empresas</h2></div><a href="#" class="txta"><div class="aTextImg">Saiba mais<img src="imagens/ArrowPurple.svg" alt=""></div><hr></a>
                         </div>
                         <div class="opRoleta" id="slot2">
-                            <div class="txtOpInv"><h1>Fll</h1><h2>Receba aluguéis de empreendimentos.</h2></div><a href="#" class="txta">Saiba mais<img src="imagens/ArrowPurple.svg" alt=""></a>
+                            <div class="txtOpInv"><h1>Fll</h1><h2>Receba aluguéis de empreendimentos.</h2></div><a href="#" class="txta"><div class="aTextImg">Saiba mais<img src="imagens/ArrowPurple.svg" alt=""></div><hr></a>
                         </div>
                         <div class="opRoleta" id="slot3">
-                            <div class="txtOpInv"><h1>ETF</h1><h2>Invista em várias ações.</h2></div><a href="#" class="txta">Saiba mais<img src="imagens/ArrowPurple.svg" alt=""></a>
+                            <div class="txtOpInv"><h1>ETF</h1><h2>Invista em várias ações.</h2></div><a href="#" class="txta"><div class="aTextImg">Saiba mais<img src="imagens/ArrowPurple.svg" alt=""></div><hr></a>
                         </div>
                         <div class="opRoleta" id="slot4">
-                            <div class="txtOpInv"><h1>CDB</h1><h2>Empreste dinheiro para bancos.</h2></div><a href="#" class="txta">Saiba mais<img src="imagens/ArrowPurple.svg" alt=""></a>
+                            <div class="txtOpInv"><h1>CDB</h1><h2>Empreste dinheiro para bancos.</h2></div><a href="#" class="txta"><div class="aTextImg">Saiba mais<img src="imagens/ArrowPurple.svg" alt=""></div><hr></a>
                         </div>
                         <div class="opRoleta" id="slot5">
-                            <div class="txtOpInv"><h1>Fundos de Investimentos</h1><h2>Um especialista cuida para você.</h2></div><a href="#" class="txta">Saiba mais<img src="imagens/ArrowPurple.svg" alt=""></a>
+                            <div class="txtOpInv"><h1>Fundos de Investimentos</h1><h2>Um especialista cuida para você.</h2></div><a href="#" class="txta"><div class="aTextImg">Saiba mais<img src="imagens/ArrowPurple.svg" alt=""></div><hr></a>
                         </div>
                         <div class="opRoleta" id="slot6">
-                            <div class="txtOpInv"><h1>BDR</h1><h2>Invista em empresas do exterior.</h2></div><a href="#" class="txta">Saiba mais<img src="imagens/ArrowPurple.svg" alt=""></a>
+                            <div class="txtOpInv"><h1>BDR</h1><h2>Invista em empresas do exterior.</h2></div><a href="#" class="txta"><div class="aTextImg">Saiba mais<img src="imagens/ArrowPurple.svg" alt=""></div><hr></a>
                         </div>
                         <div class="opRoleta" id="slot7">
-                            <div class="txtOpInv"><h1>Tesouro Direto</h1><h2>Um especialista cuida para você.</h2></div><a href="#" class="txta">Saiba mais<img src="imagens/ArrowPurple.svg" alt=""></a>
+                            <div class="txtOpInv"><h1>Tesouro Direto</h1><h2>Um especialista cuida para você.</h2></div><a href="#" class="txta"><div class="aTextImg">Saiba mais<img src="imagens/ArrowPurple.svg" alt=""></div><hr></a>
                         </div>
                     </div>
                 </div>
@@ -141,8 +141,7 @@
             <div class="arrumar">
                 <div class="text">
                     <h1>O poder de escolher como o seu dinheiro deve render é seu.</h1>
-                    <a href="#">O que pensa e de onde veio a NuInvest<img src="imagens/arrow_forward_white_24dp.svg" alt=""></a>
-
+                    <div class="linha"><a href="#"><div class="textImg">O que pensa e de onde veio a NuInvest <img src="imagens/arrow_forward_white_24dp.svg" alt=""></div><hr></a></div>
                 </div>
             </div>            
         </section>
@@ -153,8 +152,7 @@
                 <div class="text">
                     <h1><b>Carteiras Recomendadas</b></h1>
                     <h2>Análises de especialistas para você tomar as melhores decisões de investimento.</h2>
-                    <a href="#">Saiba mais<img src="imagens/ArrowPurple.svg" alt=""></a>
-                </div>
+                    <div class="linha"><a href="#"><div class="textImg">Saiba mais <img src="imagens/ArrowPurple.svg" alt=""></div><hr></a></div>                </div>
             </div>
         </section>
 
@@ -162,7 +160,7 @@
             <div class="arrumar">
                 <div class="text">
                     <h1><b>Plataformas para trader</b> Gráficos, recursos rápidos e dados em tempo real</h1>
-                    <a href="#">Saiba mais<img src="imagens/ArrowPurple.svg" alt=""></a>
+                    <div class="linha"><a href="#"><div class="textImg">Saiba mais <img src="imagens/ArrowPurple.svg" alt=""></div><hr></a></div>
                 </div>
                 <img src="imagens/home_trader_photo.webp" id="notebook" alt="">
             </div>
@@ -173,7 +171,7 @@
                 <img src="imagens/investnews.svg" id="news" alt="">
                 <div class="text">
                     <h1>Sua dose diária de inteligência financeira, com Samy Dana e Dony De Nuccio</h1>
-                    <a href="">Fique por dentro das notícias do dia<img src="imagens/arrow_forward_white_24dp.svg" alt=""></a>
+                    <div class="linha"><a href="#"><div class="textImg">Fique por dentro das notícias do dia <img src="imagens/arrow_forward_white_24dp.svg" alt=""></div><hr></a></div>
                 </div>
             </div>
         </section>
