ajuste nos tamanho e na roleta

--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
         <section id="Plataformas">
             <div class="arrumar">
                 <div class="text">
-                    <h1><b>Plataformas para trader</b> Gráficos, recursos rápidos e dados em tempo real</h1>
+                    <h1><b>Plataformas para trader</b><br>Gráficos, recursos rápidos e dados em tempo real</h1>
                     <div class="linha"><a href="#"><div class="textImg">Saiba mais <img src="imagens/ArrowPurple.svg" alt=""></div><hr></a></div>
                 </div>
                 <img src="imagens/home_trader_photo.webp" id="notebook" alt="">
