--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
         <section id="Zero">
             <div class="arrumar">
                 <div class="text">
-                    <h1 class="txth1"><b class="txtb">Zero corretagem</b><br>O jeito mais fácil de investir na Bolsa: em aplenas três cliques.</h2>
+                    <h1 class="txth1"><b class="txtb">Zero corretagem</b><br>O jeito mais fácil de investir na Bolsa: em apenas três cliques.</h2>
                         <div class="linha"><a href="#"><div class="textImg">Invista em ações com taxa zero <img src="imagens/ArrowPurple.svg" alt=""></div><hr></a></div>
                     </div>
                 <img src="imagens/homem_usando_aplicativo.webp" class="imgsection" alt="">
@@ -154,7 +154,7 @@
             <div class="arrumarA">
                     <img src="imagens/home_mockup_uv.webp" class="imgsection" id="cell" alt="">
                     <div class="text">
-                        <h1 class="txth1"><b class="txtb">Fundos Nu Ultravioleta</b><br>Uma seleção sofisitcada de fundos a partir de R$100.</h1>
+                        <h1 class="txth1"><b class="txtb">Fundos Nu Ultravioleta</b><br>Uma seleção sofisticada de fundos a partir de R$100.</h1>
                         <div class="linha"><a href="#"><div class="textImg">Sem taxa de administração <img src="imagens/ArrowPurple.svg" alt=""></div><hr></a></div>
                     </div>
             </div>
@@ -228,7 +228,7 @@
 
         <section id="InvestNews">
             <div class="arrumar">
-                <img src="imagens/investnews.svg" id="news" alt="">
+                <img src="imagens/investnews.svg" id="news" class="imgsection" alt="">
                 <div class="text">
                     <h1>Sua dose diária de inteligência financeira, com Samy Dana e Dony De Nuccio</h1>
                     <div class="linha"><a href="#"><div class="textImg">Fique por dentro das notícias do dia <img src="imagens/arrow_forward_white_24dp.svg" alt=""></div><hr></a></div>
